re-org and subdomain experiment

--- a/package.json
+++ b/package.json
@@ -13,12 +13,24 @@
         "@types/express": "^4.17.3",
         "@types/http-proxy": "^1.17.3",
         "@types/lru-cache": "^5.1.0",
+        "@types/multiaddr": "^7.2.0",
+        "@types/multibase": "^0.6.0",
+        "@types/multicodec": "^1.0.0",
+        "acme-dns-01-digitalocean": "^3.0.1",
+        "acme-dns-01-namecheap": "^3.0.1",
         "axios": "^0.19.2",
+        "bip39-codec": "^1.1.0",
+        "cid": "^0.1.0",
         "express": "^4.17.1",
         "express-vhost": "^0.2.0",
         "greenlock-express": "^4.0.3",
         "http-proxy": "^1.18.0",
         "lru-cache": "^5.1.1",
+        "multiaddr": "^7.4.2",
+        "multibase": "^0.7.0",
+        "multicodec": "^1.0.1",
+        "nocache": "^2.1.0",
+        "prefix-trie-ts": "0.0.4",
         "ts-node": "^8.6.2",
         "typescript": "^3.8.3"
     }
