--- a/.greenlockrc
+++ b/.greenlockrc
@@ -1,1 +1,1 @@
-{"manager":{"module":"@greenlock/manager"},"configDir":"./greenlock.d"}
+{"manager":{"module":"./greenlock-manager"},"configDir":"./greenlock.d"}
